--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist"
+    "build": "webpack --mode production"
   },
   "keywords": [
     "todo",
@@ -18,7 +17,6 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^6.8.1",
-    "gh-pages": "^6.3.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
